--- a/portfolio.html
+++ b/portfolio.html
@@ -26,27 +26,60 @@
     <header class="header">
       <div class="header-flex container">
         <nav class="header-nav">
-          <a lang="en" href="./index.html" class="header-logo">
+          <a
+            class="header-logo"
+            lang="en"
+            href="./index.html"
+            aria-label="Начальная  страница"
+          >
             <span class="accent">Web</span>Studio
           </a>
           <ul class="header-nav-list list">
             <li class="header-nav-item">
-              <a href="./index.html" class="header-nav-link">Студия</a>
+              <a
+                class="header-nav-link"
+                href="./index.html"
+                aria-label="Начальная  страница"
+                >Студия</a
+              >
             </li>
             <li class="header-nav-item">
-              <a href="./portfolio.html" class="header-nav-link current">Портфолио</a>
+              <a
+                class="header-nav-link current"
+                href="./portfolio.html"
+                aria-label="Страница портфолио"
+                >Портфолио</a
+              >
             </li>
             <li class="header-nav-item">
-              <a href="" class="header-nav-link">Контакты</a>
+              <a class="header-nav-link" href="" aria-label="Страница контакты"
+                >Контакты</a
+              >
             </li>
           </ul>
         </nav>
         <ul class="header-contacts list">
           <li class="header-contacts-item">
-            <a href="mailto:info@devstudio.com" class="header-contacts-link">info@devstudio.com</a>
+            <a
+              class="header-contacts-link"
+              href="mailto:info@devstudio.com"
+              aria-label="Почта"
+              ><svg class="header-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <li class="header-contacts-item">
-            <a href="tel:+380961111111" class="header-contacts-link">+38 096 111 11 11</a>
+            <a
+              class="header-contacts-link"
+              href="tel:+380961111111"
+              aria-label="Телефон"
+              ><svg class="header-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -61,27 +94,44 @@
           <!-- Фильтр - набор радиокнопок -->
           <ul class="content-set list">
             <li class="content-set-el">
-              <button type="button" class="content-set-button">Все</button>
+              <button class="content-set-button" type="button">Все</button>
             </li>
             <li class="content-set-el">
-              <button type="button" class="content-set-button">Веб-сайты</button>
+              <button class="content-set-button" type="button">
+                Веб-сайты
+              </button>
             </li>
             <li class="content-set-el">
-              <button type="button" class="content-set-button">Приложения</button>
+              <button class="content-set-button" type="button">
+                Приложения
+              </button>
             </li>
             <li class="content-set-el">
-              <button type="button" class="content-set-button">Дизайн</button>
+              <button class="content-set-button" type="button">Дизайн</button>
             </li>
             <li class="content-set-el">
-              <button type="button" class="content-set-button">Маркетинг</button>
+              <button class="content-set-button" type="button">
+                Маркетинг
+              </button>
             </li>
           </ul>
 
           <!-- Примеры работ -->
           <ul class="content-items list">
             <li class="content-items-el">
-              <a href="" class="content-items-link">
-                <img src="./images/site.jpg" alt="сайт" width="370" height="294" />
+              <a
+                class="content-items-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Веб-сайт Технокряк"
+              >
+                <img
+                  src="./images/site.jpg"
+                  alt="сайт"
+                  width="370"
+                  height="294"
+                />
                 <div class="caption-text">
                   <h3 class="content-items-caption title">Технокряк</h3>
                   <p class="content-items-text">Веб-сайт</p>
@@ -89,17 +139,41 @@
               </a>
             </li>
             <li class="content-items-el">
-              <a href="" class="content-items-link">
-                <img src="./images/basket.jpg" alt="баскетбол" width="370" height="294" />
+              <a
+                class="content-items-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Дизайн Постер New Orlean vs Golden Star"
+              >
+                <img
+                  src="./images/basket.jpg"
+                  alt="баскетбол"
+                  width="370"
+                  height="294"
+                />
                 <div class="caption-text">
-                  <h3 class="content-items-caption title">Постер New Orlean vs Golden Star</h3>
+                  <h3 class="content-items-caption title">
+                    Постер New Orlean vs Golden Star
+                  </h3>
                   <p class="content-items-text">Дизайн</p>
                 </div>
               </a>
             </li>
             <li class="content-items-el">
-              <a href="" class="content-items-link">
-                <img src="./images/restaurant.jpg" alt="ресторан" width="370" height="294" />
+              <a
+                class="content-items-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Приложение Ресторан Seafood"
+              >
+                <img
+                  src="./images/restaurant.jpg"
+                  alt="ресторан"
+                  width="370"
+                  height="294"
+                />
                 <div class="caption-text">
                   <h3 class="content-items-caption title">Ресторан Seafood</h3>
                   <p class="content-items-text">Приложение</p>
@@ -107,8 +181,19 @@
               </a>
             </li>
             <li class="content-items-el">
-              <a href="" class="content-items-link">
-                <img src="./images/headphones.jpg" alt="наушники" width="370" height="294" />
+              <a
+                class="content-items-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Маркетинг Проект Prime"
+              >
+                <img
+                  src="./images/headphones.jpg"
+                  alt="наушники"
+                  width="370"
+                  height="294"
+                />
                 <div class="caption-text">
                   <h3 class="content-items-caption title">Проект Prime</h3>
                   <p class="content-items-text">Маркетинг</p>
@@ -116,8 +201,19 @@
               </a>
             </li>
             <li class="content-items-el">
-              <a href="" class="content-items-link">
-                <img src="./images/boxes.jpg" alt="коробки" width="370" height="294" />
+              <a
+                class="content-items-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Приложение Проект Boxes"
+              >
+                <img
+                  src="./images/boxes.jpg"
+                  alt="коробки"
+                  width="370"
+                  height="294"
+                />
                 <div class="caption-text">
                   <h3 class="content-items-caption title">Проект Boxes</h3>
                   <p class="content-items-text">Приложение</p>
@@ -125,26 +221,63 @@
               </a>
             </li>
             <li class="content-items-el">
-              <a href="" class="content-items-link">
-                <img src="./images/monitor.jpg" alt="монитор" width="370" height="294" />
+              <a
+                class="content-items-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Веб-сайт Inspiration has no Borders"
+              >
+                <img
+                  src="./images/monitor.jpg"
+                  alt="монитор"
+                  width="370"
+                  height="294"
+                />
                 <div class="caption-text">
-                  <h3 class="content-items-caption title">Inspiration has no Borders</h3>
+                  <h3 class="content-items-caption title">
+                    Inspiration has no Borders
+                  </h3>
                   <p class="content-items-text">Веб-сайт</p>
                 </div>
               </a>
             </li>
             <li class="content-items-el">
-              <a href="" class="content-items-link">
-                <img src="./images/book.jpg" alt="книга" width="370" height="294" />
+              <a
+                class="content-items-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Дизайн Издание Limited Edition"
+              >
+                <img
+                  src="./images/book.jpg"
+                  alt="книга"
+                  width="370"
+                  height="294"
+                />
                 <div class="caption-text">
-                  <h3 class="content-items-caption title">Издание Limited Edition</h3>
+                  <h3 class="content-items-caption title">
+                    Издание Limited Edition
+                  </h3>
                   <p class="content-items-text">Дизайн</p>
                 </div>
               </a>
             </li>
             <li class="content-items-el">
-              <a href="" class="content-items-link">
-                <img src="./images/label.jpg" alt="этикетка" width="370" height="294" />
+              <a
+                class="content-items-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Маркетинг Проект LAB"
+              >
+                <img
+                  src="./images/label.jpg"
+                  alt="этикетка"
+                  width="370"
+                  height="294"
+                />
                 <div class="caption-text">
                   <h3 class="content-items-caption title">Проект LAB</h3>
                   <p class="content-items-text">Маркетинг</p>
@@ -152,8 +285,19 @@
               </a>
             </li>
             <li class="content-items-el">
-              <a href="" class="content-items-link">
-                <img src="./images/notebook.jpg" alt="ноутбук" width="370" height="294" />
+              <a
+                class="content-items-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Приложение Growing Business"
+              >
+                <img
+                  src="./images/notebook.jpg"
+                  alt="ноутбук"
+                  width="370"
+                  height="294"
+                />
                 <div class="caption-text">
                   <h3 class="content-items-caption title">Growing Business</h3>
                   <p class="content-items-text">Приложение</p>
@@ -167,30 +311,105 @@
 
     <!-- Футер -->
     <footer class="footer">
-      <div class="container">
-        <a lang="en" href="./index.html" class="footer-logo">
-          <span class="accent">Web</span>Studio
-        </a>
-        <address>
-          <ul class="footer-contacts list">
-            <li class="footer-contacts-el">
+      <div class="container footer-flex">
+        <div class="footer-logo-adress">
+          <a
+            class="footer-logo"
+            lang="en"
+            href="./index.html"
+            aria-label="Начальная страница"
+          >
+            <span class="accent">Web</span>Studio
+          </a>
+          <address>
+            <ul class="footer-contacts list">
+              <li class="footer-contacts-el">
+                <a
+                  class="footer-contacts-address"
+                  href="https://goo.gl/maps/7NLyf6NmW3WCzavR7"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Адресс"
+                >
+                  г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-contacts-el">
+                <a
+                  class="footer-contacts-link"
+                  href="mailto:info@example.com"
+                  aria-label="Почта"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="footer-contacts-el">
+                <a
+                  class="footer-contacts-link"
+                  href="tel:+380991111111"
+                  aria-label="Телефон"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-socials">
+          <p class="footer-title">присоединяйтесь</p>
+          <ul class="footer-list list">
+            <li class="footer-el">
               <a
-                class="footer-contacts-address"
-                href="https://goo.gl/maps/7NLyf6NmW3WCzavR7"
+                class="footer-link"
+                href=""
                 target="_blank"
                 rel="noopener noreferrer"
+                aria-label="Иконка instagram"
               >
-                г. Киев, пр-т Леси Украинки, 26</a
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-el">
+              <a
+                class="footer-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Иконка twitter"
               >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-contacts-el">
-              <a href="mailto:info@example.com" class="footer-contacts-link">info@example.com</a>
+            <li class="footer-el">
+              <a
+                class="footer-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Иконка facebook"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-contacts-el">
-              <a href="tel:+380991111111" class="footer-contacts-link">+38 099 111 11 11</a>
+            <li class="footer-el">
+              <a
+                class="footer-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Иконка linkedin"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
