Добавляет модальное окно, позиционирование и переходы

--- a/portfolio.html
+++ b/portfolio.html
@@ -126,12 +126,22 @@
                 rel="noopener noreferrer"
                 aria-label="Веб-сайт Технокряк"
               >
-                <img
-                  src="./images/site.jpg"
-                  alt="сайт"
-                  width="370"
-                  height="294"
-                />
+                <div class="content-image-overlay">
+                  <img
+                    src="./images/site.jpg"
+                    alt="сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="content-overlay">
+                    <p class="content-overlay-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="caption-text">
                   <h3 class="content-items-caption title">Технокряк</h3>
                   <p class="content-items-text">Веб-сайт</p>
@@ -146,12 +156,22 @@
                 rel="noopener noreferrer"
                 aria-label="Дизайн Постер New Orlean vs Golden Star"
               >
-                <img
-                  src="./images/basket.jpg"
-                  alt="баскетбол"
-                  width="370"
-                  height="294"
-                />
+                <div class="content-image-overlay">
+                  <img
+                    src="./images/basket.jpg"
+                    alt="баскетбол"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="content-overlay">
+                    <p class="content-overlay-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="caption-text">
                   <h3 class="content-items-caption title">
                     Постер New Orlean vs Golden Star
@@ -168,12 +188,22 @@
                 rel="noopener noreferrer"
                 aria-label="Приложение Ресторан Seafood"
               >
-                <img
-                  src="./images/restaurant.jpg"
-                  alt="ресторан"
-                  width="370"
-                  height="294"
-                />
+                <div class="content-image-overlay">
+                  <img
+                    src="./images/restaurant.jpg"
+                    alt="ресторан"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="content-overlay">
+                    <p class="content-overlay-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="caption-text">
                   <h3 class="content-items-caption title">Ресторан Seafood</h3>
                   <p class="content-items-text">Приложение</p>
@@ -188,12 +218,22 @@
                 rel="noopener noreferrer"
                 aria-label="Маркетинг Проект Prime"
               >
-                <img
-                  src="./images/headphones.jpg"
-                  alt="наушники"
-                  width="370"
-                  height="294"
-                />
+                <div class="content-image-overlay">
+                  <img
+                    src="./images/headphones.jpg"
+                    alt="наушники"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="content-overlay">
+                    <p class="content-overlay-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="caption-text">
                   <h3 class="content-items-caption title">Проект Prime</h3>
                   <p class="content-items-text">Маркетинг</p>
@@ -208,12 +248,22 @@
                 rel="noopener noreferrer"
                 aria-label="Приложение Проект Boxes"
               >
-                <img
-                  src="./images/boxes.jpg"
-                  alt="коробки"
-                  width="370"
-                  height="294"
-                />
+                <div class="content-image-overlay">
+                  <img
+                    src="./images/boxes.jpg"
+                    alt="коробки"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="content-overlay">
+                    <p class="content-overlay-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="caption-text">
                   <h3 class="content-items-caption title">Проект Boxes</h3>
                   <p class="content-items-text">Приложение</p>
@@ -228,12 +278,22 @@
                 rel="noopener noreferrer"
                 aria-label="Веб-сайт Inspiration has no Borders"
               >
-                <img
-                  src="./images/monitor.jpg"
-                  alt="монитор"
-                  width="370"
-                  height="294"
-                />
+                <div class="content-image-overlay">
+                  <img
+                    src="./images/monitor.jpg"
+                    alt="монитор"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="content-overlay">
+                    <p class="content-overlay-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="caption-text">
                   <h3 class="content-items-caption title">
                     Inspiration has no Borders
@@ -250,12 +310,22 @@
                 rel="noopener noreferrer"
                 aria-label="Дизайн Издание Limited Edition"
               >
-                <img
-                  src="./images/book.jpg"
-                  alt="книга"
-                  width="370"
-                  height="294"
-                />
+                <div class="content-image-overlay">
+                  <img
+                    src="./images/book.jpg"
+                    alt="книга"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="content-overlay">
+                    <p class="content-overlay-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="caption-text">
                   <h3 class="content-items-caption title">
                     Издание Limited Edition
@@ -272,12 +342,22 @@
                 rel="noopener noreferrer"
                 aria-label="Маркетинг Проект LAB"
               >
-                <img
-                  src="./images/label.jpg"
-                  alt="этикетка"
-                  width="370"
-                  height="294"
-                />
+                <div class="content-image-overlay">
+                  <img
+                    src="./images/label.jpg"
+                    alt="этикетка"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="content-overlay">
+                    <p class="content-overlay-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="caption-text">
                   <h3 class="content-items-caption title">Проект LAB</h3>
                   <p class="content-items-text">Маркетинг</p>
@@ -292,12 +372,22 @@
                 rel="noopener noreferrer"
                 aria-label="Приложение Growing Business"
               >
-                <img
-                  src="./images/notebook.jpg"
-                  alt="ноутбук"
-                  width="370"
-                  height="294"
-                />
+                <div class="content-image-overlay">
+                  <img
+                    src="./images/notebook.jpg"
+                    alt="ноутбук"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="content-overlay">
+                    <p class="content-overlay-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="caption-text">
                   <h3 class="content-items-caption title">Growing Business</h3>
                   <p class="content-items-text">Приложение</p>
