--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button class="hero-button" type="button">Заказать услугу</button>
+          <button class="hero-button" type="button" data-modal-open>
+            Заказать услугу
+          </button>
         </div>
       </section>
 
@@ -163,6 +165,7 @@
                 width="370"
                 height="294"
               />
+              <h3 class="work-caption">Десктопные приложения</h3>
             </li>
             <li class="work-item">
               <img
@@ -171,6 +174,7 @@
                 width="370"
                 height="294"
               />
+              <h3 class="work-caption">Мобильные приложения</h3>
             </li>
             <li class="work-item">
               <img
@@ -179,6 +183,7 @@
                 width="370"
                 height="294"
               />
+              <h3 class="work-caption">Дизайнерские решения</h3>
             </li>
           </ul>
         </div>
@@ -610,5 +615,18 @@
         </div>
       </div>
     </footer>
+
+    <!-- Модальное окно -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-close-btn" type="button" data-modal-close>
+          <svg width="18" height="18">
+            <use href="./images/icons.svg#close-black-18dp"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
