--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
     <main>
       <!-- Герой -->
       <section class="hero">
-        <div class="container">
+        <div class="container hero-flex">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button class="hero-button" type="button" data-modal-open>
+          <button class="hero-footer-button" type="button" data-modal-open>
             Заказать услугу
           </button>
         </div>
@@ -613,6 +613,32 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p class="footer-title">подпишитесь на рассылку</p>
+          <div class="footer-subscribe-field">
+            <label
+              class="footer-subscribe-label"
+              for="footer-subscribe-email"
+            ></label>
+            <input
+              class="footer-subscribe-input"
+              type="email"
+              placeholder="E-mail"
+              name="footer-subscribe-email"
+              id="footer-subscribe-email"
+            />
+            <button class="hero-footer-button" type="submit" data-modal-open>
+              Подписаться
+              <svg
+                class="footer-subscribe-icon clients-icon"
+                width="24"
+                height="24"
+              >
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
 
@@ -620,10 +646,78 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close-btn" type="button" data-modal-close>
-          <svg width="18" height="18">
+          <svg class="modal-close-icon" width="18" height="18">
             <use href="./images/icons.svg#close-black-18dp"></use>
           </svg>
         </button>
+
+        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+        <form action="#" class="modal-form">
+          <div class="modal-field modal-data">
+            <label class="modal-label" for="user-name">Имя</label>
+            <div class="input-wrap">
+              <input
+                class="modal-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field modal-data">
+            <label class="modal-label" for="user-tel">Телефон</label>
+            <div class="input-wrap">
+              <input
+                class="modal-input"
+                type="tel"
+                name="user-tel"
+                id="user-tel"
+              />
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field modal-data">
+            <label class="modal-label" for="user-email">Почта</label>
+            <div class="input-wrap">
+              <input
+                class="modal-input"
+                type="email"
+                name="user-email"
+                id="user-email"
+              />
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label class="modal-label" for="user-text">Комментарий</label>
+            <textarea
+              class="modal-text"
+              name="user-text"
+              id="user-text"
+              placeholder="Введите текст"
+            ></textarea>
+          </div>
+          <div class="modal-field modal-checkbox">
+            <input
+              class="modal-check visually-hidden"
+              type="checkbox"
+              name="policy"
+              id="policy"
+            />
+            <label class="check-text" for="policy"
+              >Соглашаюсь с рассылкой и принимаю
+              <a class="check-link" href=""> Условия договора</a></label
+            >
+          </div>
+          <button class="modal-submit" type="submit">Отправить</button>
+        </form>
       </div>
     </div>
 
