--- a/portfolio.html
+++ b/portfolio.html
@@ -500,6 +500,28 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p class="footer-title">подпишитесь на рассылку</p>
+          <div class="footer-subscribe-field">
+            <label class="footer-subscribe-label"></label>
+            <input
+              type="email"
+              class="footer-subscribe-input"
+              placeholder="E-mail"
+              name="footer-subscribe-email"
+            />
+            <button class="hero-footer-button" type="submit" data-modal-open>
+              Подписаться
+              <svg
+                class="footer-subscribe-icon clients-icon"
+                width="24"
+                height="24"
+              >
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
